tests/ui/type-alias-impl-trait/unconstrained-impl-param.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-impl-param.rs:12:6
   |
LL | impl<'a> Trait for Opaque<&'a str> {
   |      ^^ unconstrained lifetime parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
